# container-compose

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml
Formula/: container-compose.rb
docs/: ARCHITECTURE.md  RELEASE.md
scripts/: release.sh
src/container_compose_proxy/: __init__.py  cli.py  compose.py  config.py  engine.py  errors.py  mounts.py  ports.py  process.py
tests/: test_cli.py  test_compose.py  test_config.py  test_engine.py  test_mounts.py  test_ports.py  test_process.py
tests/fixtures/basic/: compose.yml
tests/fixtures/basic/html/: index.html
tests/fixtures/complex/: compose.yml
tests/fixtures/complex/app/: index.html
tests/fixtures/complex/env/: feature.env
tests/integration/: test_compose_proxy.py
